2006-10-24  Akim Demaille  <demaille@gostai.com>

	Remove AIBO connection code
	* src/network/OPENR: Remove.
	* src/network/OPENR/aiboconnection.h: Remove.
	* src/network/OPENR/openr.mk: Remove.
	* src/network/OPENR/aiboconnection.cc: Remove.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Adjust to libport installation
	* src/Makefile.am: No longer install libport bits.
	(AM_CXXFLAGS): Point to uobject/.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uvar.cc: Make it more alike its peer.

2006-10-22  Akim Demaille  <akim.demaille@free.fr>

	Stop using symlinks, Matthieu dislikes them
	* src/uobject/uobject.cc, src/uobject/uvar.cc: Move to...
	* src/uobject.cc, src/uvar.cc: here.
	* src/uobject/uobject.h, src/uobject/uext.h,
	* src/uobject/common_uvalue.cc: Remove.
	* src/Makefile.am (liburbi_srcdir, uobject_srcdir): New.
	Use them to use the copies shipped by the enbedded liburbi.

2006-10-22  Akim Demaille  <akim.demaille@free.fr>

	Fix parser compilation under Aibo
	* src/parser/bison/bison.mk: Include an explicit compilation
	rule for ugrammar.cc which uses PARSER_CXXFLAGS.
	This rule was copied from Automake 1.9.6's output.
	* src/Makefile.am: Don't compile console for aibo.
	(libkernel_la_CPPFLAGS): Don't define it, it makes the object
	file names longer for no good reason.
	Just let AM_CPPFLAGS do its job.
	* configure.ac: Don't define NETWORK_OPENR, OPENR suffices.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Prepare aibo
	* src/console.cc: Use libport/utime.hh.
	* src/parser/bison/bison.mk: Compile the parser in a separate
	library, in a failed attempt to avoid -O2.
	* src/Makefile.am: Do not compile the Aibo connection kit.
	Will probably be removed later.

2006-10-21  Akim Demaille  <your.mail.here@FIXME.com>

	ChangeLog issues

2006-10-20  Type Your Name Here  <your.mail.here@FIXME.com>

	Upped libport and liburbi, small fix as a consequence

	* src/uvalue.cc: cast char*->unsigned char*.
